<?xml version="1.0"?>
<package>
  <name>reactive_planner</name>
  <version>0.0.0</version>
  <description>The reactive_planner package</description>

  <maintainer email="james.s.jackson@byu.edu">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>fcu_common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>fcu_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>




  <export>

  </export>
</package>
